# nt

./: CMakeLists.txt  README.md
.github/workflows/: ci.yaml
cmake/: nt-config.cmake
cmake/preset/: base.json
include/: nt.hpp  number.hpp
test/: CMakeLists.txt  test_main.cpp
